# velicor

./: .gitignore  README.md  integration.drawio  pyproject.toml  requirements.txt  velicor.drawio
.github/workflows/: backend-ci.yml
app/: main.py
app/api/v1/: auth.py  endpoints.py  services.py  webhooks.py
app/core/: config.py  security.py
app/db/: mongo.py  postgres.py  redis.py
app/models/: service.py  user.py
app/services/: notifier.py  queue.py  worker.py
scripts/: reset_user.py
tests/: conftest.py  test_ingestion.py
